[gd_scene load_steps=5 format=3 uid="uid://dmcj3ekgwvf1m"]

[ext_resource type="Theme" uid="uid://bggq01u0avesd" path="res://resources/app_theme.tres" id="1_j5px3"]
[ext_resource type="Script" uid="uid://sbjbkydjcjy2" path="res://scripts/root.gd" id="2_twpsu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lrqlo"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7up8o"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="root" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_j5px3")
script = ExtResource("2_twpsu")

[node name="MainMenu" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lrqlo")

[node name="CenterContainer" type="CenterContainer" parent="MainMenu"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "SkillBox"
horizontal_alignment = 1

[node name="EmotionContainer" type="VBoxContainer" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Anxiety" type="Button" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["emotion_buttons"]]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Anxiety"

[node name="Grief" type="Button" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["emotion_buttons"]]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Grief
"

[node name="Stress" type="Button" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["emotion_buttons"]]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Stress"

[node name="Shame" type="Button" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["emotion_buttons"]]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Shame
"

[node name="Anger" type="Button" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["emotion_buttons"]]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Anger"

[node name="Hopelessness" type="Button" parent="MainMenu/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["emotion_buttons"]]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Hopelessness"

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -464.0
offset_bottom = 214.0
grow_horizontal = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Favorites" type="Button" parent="MainMenu/MarginContainer"]
visible = false
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Favorites"

[node name="Variation" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lrqlo")

[node name="CenterContainer" type="CenterContainer" parent="Variation"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Variation/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Variation/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="Variation/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Emotion "
horizontal_alignment = 1

[node name="EmotionContainer" type="VBoxContainer" parent="Variation/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="Short" type="Button" parent="Variation/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["variation_buttons"]]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Short"

[node name="Long" type="Button" parent="Variation/CenterContainer/MarginContainer/VBoxContainer/EmotionContainer" groups=["variation_buttons"]]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Long"

[node name="MarginContainer" type="MarginContainer" parent="Variation"]
layout_mode = 1
offset_right = 464.0
offset_bottom = 214.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Main" type="Button" parent="Variation/MarginContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Main"

[node name="Emotion" type="Label" parent="Variation"]
layout_mode = 0
offset_left = 4.0
offset_top = 1714.0
offset_right = 1088.0
offset_bottom = 1879.0
theme_override_font_sizes/font_size = 50
text = "Short exercises - 5 min
Long exercises recommended - 10 min"
horizontal_alignment = 1

[node name="Exercise" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lrqlo")

[node name="CenterContainer" type="CenterContainer" parent="Exercise"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Exercise/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Exercise/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="Exercise/CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "variant - emotion"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Description" type="Label" parent="Exercise/CenterContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "Take a few deep breaths then ask yourself what to do in this moment aaaaaaa aaaaa aaaaaa Take a few deep breaths then ask yourself what to do in this moment aaaaaaa aaaaa aaaaaa Take a few deep breaths then ask yourself what to do in this moment aaaaaaa aaaaa aaaaaa Take a few deep breaths then ask yourself what to do in this moment aaaaaaa aaaaa aaaaaa Take a few deep breaths then ask yourself what to do in this moment aaaaaaa aaaaa aaaaaa"
autowrap_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Exercise"]
layout_mode = 1
offset_right = 464.0
offset_bottom = 214.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Main" type="Button" parent="Exercise/MarginContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Main"

[node name="MarginContainer2" type="MarginContainer" parent="Exercise"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -464.0
offset_bottom = 214.0
grow_horizontal = 0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Save" type="Button" parent="Exercise/MarginContainer2"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Save"

[node name="Favorites" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lrqlo")

[node name="CenterContainer" type="CenterContainer" parent="Favorites"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Favorites/CenterContainer"]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="Favorites/CenterContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="Favorites/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 80
text = "Favorite Excercises"
horizontal_alignment = 1

[node name="EmotionContainer" type="VBoxContainer" parent="Favorites/CenterContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="Favorites"]
layout_mode = 1
offset_right = 464.0
offset_bottom = 214.0
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Main" type="Button" parent="Favorites/MarginContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_7up8o")
text = "Main"

[connection signal="pressed" from="MainMenu/MarginContainer/Favorites" to="." method="_on_favorites_pressed"]
[connection signal="pressed" from="Variation/MarginContainer/Main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="Exercise/MarginContainer/Main" to="." method="_on_main_pressed"]
[connection signal="pressed" from="Exercise/MarginContainer2/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Favorites/MarginContainer/Main" to="." method="_on_main_pressed"]
